#==============================================================================
# Copyright (c) 2013 Evgeny Proydakov <lord.tiran@gmail.com>
#==============================================================================
# CMake for WIN32 PROJECT
#==============================================================================

MESSAGE(STATUS "BUILD  NT\n")

SET(PROJECT_FOLDER "nt")

ADD_SUBDIRECTORY(blue_screen)

MESSAGE(STATUS "")
