#==============================================================================
# Copyright (c) 2013 Evgeny Proydakov <lord.tiran@gmail.com>
#==============================================================================
# CMake for OLYMPIC PROJECT
#==============================================================================

MESSAGE(STATUS "BUILD OLYMPIC\n")

SET(PROJECT_FOLDER "olympic")

ADD_SUBDIRECTORY(lcd_display)

MESSAGE(STATUS "")
