#==============================================================================
# Copyright (c) 2013 Evgeny Proydakov <lord.tiran@gmail.com>
#==============================================================================

MESSAGE(STATUS "BUILD  PERFORMANCE\n")

SET(PROJECT_FOLDER "performance")

ADD_SUBDIRECTORY(vector_vs_list)

MESSAGE(STATUS "")
